--- a/src/app/persons/admin.html
+++ b/src/app/persons/admin.html
@@ -10,6 +10,7 @@
       <md-tab label="Person Management">
         <md-content>
 
+          <headerMenu></headerMenu>
         </md-content>
       </md-tab>
       <md-tab label="Customer Management">
