--- a/src/app/persons/unit.html
+++ b/src/app/persons/unit.html
@@ -4,9 +4,9 @@
       <md-tab class="md-tab-item" label="PEOPLE">
         <md-content class="md-padding">
 
-          <div inactiveusers>
+          <
+          <!--<div inactiveusers>-->
 
-          </div>
 
         </md-content>
       </md-tab>
