--- a/src/app/authentication/login.html
+++ b/src/app/authentication/login.html
@@ -1,4 +1,4 @@
-<div id="login" class="row">
+<div ng-if="!vm.logged" id="login" class="row">
     <div class="col-sm-6 col-md-4 col-md-offset-4">
       <h1 class="text-center login-title">360 Tool</h1>
       <div>
@@ -14,7 +14,7 @@
                 <div ng-message="md-minlength">Username has to be minimum 2 characters long.</div>
               </div>
             </md-input-container>
-            <md-button style="width: 90%" class="md-raised md-primary" ng-click="loginCredentials()">Login</md-button>
+            <md-button style="width: 90%" class="md-raised md-primary" ng-click="vm.logIn(userData)">Login</md-button>
 
             <a href="#/register" class="text-center new-account">Create an account </a>
             <div ng-show="invalid" class="alert alert-danger" role="alert">{{errmsg}}</div>
@@ -24,4 +24,7 @@
     </div>
 </div>
 
+<div ng-if="vm.logged">
+  <p>successfully logged in!</p>
+</div>
 
