--- a/src/app/persons/profile.html
+++ b/src/app/persons/profile.html
@@ -51,8 +51,8 @@
         <ng-md-icon icon="place" flex="10"></ng-md-icon>
         <div style="padding-top:30px;" flex="90">
           <p layout="column">
-            <span>Schaluinstraat 3</span>
-            <span> 3128, Baal</span>
+            <span>Schapenstraat 4</span>
+            <span> 3030, Betekom</span>
             <span> Vlaams-Brabant</span>
             <span> Belgium</span>
           </p>
