added stub impl for auth service

--- a/jworks360/src/auth/component/login.html
+++ b/jworks360/src/auth/component/login.html
@@ -3,15 +3,15 @@
         <md-input-container class="md-icon-float md-block">
             <label>Email</label>
             <md-icon md-svg-icon="com:email" ></md-icon>
-            <input ng-model="user.email" type="text">
+            <input ng-model="vm.user.email" type="text">
         </md-input-container>
         <md-input-container class="md-block">
             <label>Password</label>
             <md-icon></md-icon>
-            <input ng-model="user.pw" type="text">
+            <input ng-model="vm.user.pw" type="password">
         </md-input-container>
     </md-content>
-    <md-button class="md-raised md-primary">Login</md-button>
+    <md-button ng-click="vm.validate()" class="md-raised md-primary">Login</md-button>
     <section>
         <md-button>Register</md-button>
     </section>
