--- a/jworks360/src/timeline/directive/item-template.hbs
+++ b/jworks360/src/timeline/directive/item-template.hbs
@@ -1,4 +1,9 @@
 <div>
-  <h1>{{title}}</h1>
-  <h2>{{type}}</h2>
+	<h3 class="md-subhead">{{type}}</h3>	
+  	<h2 class="md-title">
+  	{{description}}
+  	</h2>
+  	<div class="overlay">
+  		{{moreInformation}}
+  	</div>
 </div>
