--- a/jworks360/src/timeline/directive/style.scss
+++ b/jworks360/src/timeline/directive/style.scss
@@ -4,6 +4,14 @@
   border-color: #faebcc;
   background-color: #fcf8e3;
 }
+.overlay{
+   display:none;
+  width:100px;
+  height: 100px;
+}
+.overlay:hover {
+ display:none;
+}
 .vis-timeline {
   border: none;
 }
@@ -27,8 +35,17 @@
   background: #f5f5f5;
 }
 .vis-panel.vis-center {
-  border-bottom-color: orange;
+  border-bottom-color: white;
   border-bottom-width: 1px;
+}
+.vis-panel.vis-bottom{
+  display: none;
+}
+.vis-shadow{
+  border: none;
+}
+.vis-right{
+  border:none;
 }
 .vis-time-axis .vis-text {
   color: #150d02;
