--- a/jworks360/src/timeline/directive/item-template.hbs
+++ b/jworks360/src/timeline/directive/item-template.hbs
@@ -1,9 +1,6 @@
 <div>
-	<h3 class="md-subhead">{{type}}</h3>	
+	<h3 class="md-subhead">{{timeLineItem.type}}</h3>
   	<h2 class="md-title">
-  	{{description}}
+  	{{shortDescription}}
   	</h2>
-  	<div class="overlay">
-  		{{moreInformation}}
-  	</div>
 </div>
