--- a/jworks360/src/timeline/directive/item-template.hbs
+++ b/jworks360/src/timeline/directive/item-template.hbs
@@ -1,6 +1,6 @@
 <div>
 	<h3 class="md-subhead">{{timeLineItem.type}}</h3>
   	<h2 class="md-title">
-  	{{shortDescription}}
+  	{{timeLineItem.description}}
   	</h2>
 </div>
