--- a/jworks360/src/timeline/directive/item-template.hbs
+++ b/jworks360/src/timeline/directive/item-template.hbs
@@ -1,6 +1,7 @@
 <div>
-	<h3 class="md-subhead">{{timeLineItem.type}}</h3>
-  	<h2 class="md-title">
-  	{{timeLineItem.description}}
-  	</h2>
+    <h3 class="md-caption">{{timeLineItem.type}}</h3>
+    <h2 class="md-subhead">
+      <strong>{{timeLineItem.description}}</strong>
+    </h2>
+    <p class="md-body-1">{{timeLineItem.shortInfo}}</p>
 </div>
