--- a/jworks360/src/profile/components/about/about-template.html
+++ b/jworks360/src/profile/components/about/about-template.html
@@ -20,12 +20,12 @@
         <div flex="30" class="about-img" layout="row" layout-align="start top">
           <p>[img]</p>
         </div>
-        <div flex layout="column">
+        <div layout="column">
           <div class="about-description">
-            <h4>Function</h4>
+            <h4 class="to-upper-case">Function</h4>
             <span>Designer</span>
-            <h4>Unit</h4>
-            <span>Clockwork</span>
+            <h4 class="to-upper-case">Unit</h4>
+            <span class="unit">Clockwork</span>
           </div>
         </div>
         <div flex="50">
