--- a/jworks360/src/profile/components/about/about-directive-styles.scss
+++ b/jworks360/src/profile/components/about/about-directive-styles.scss
@@ -17,6 +17,7 @@ profile-about {
       margin-bottom: 0.5em;
     }
     .about-description {
+      font-family: Neuratext;
       margin-top: 1em;
       border-right: 1px solid $borderColor;
       padding-right: 25px;
