Add ability to remove icons from card header Refactor code

--- a/ordineo/assets/fonts/neuratext.scss
+++ b/ordineo/assets/fonts/neuratext.scss
@@ -1,20 +1,20 @@
 @font-face {
   font-family: Neuratext;
-  src: url('./nautratext-lightalt2.ttf');
+  src: url('nautratext-lightalt2.ttf');
 }
 @font-face {
   font-family: NeuratextBold;
-  src: url('./neutratext-bold.otf');
+  src: url('neutratext-bold.otf');
 }
 @font-face{
   font-family: NexaBold;
-  src: url('./nexa_bold.otf');
+  src: url('nexa_bold.otf');
   font-style: normal;
   font-weight: bold;
 }
 @font-face{
   font-family: NexaLight;
-  src: url('./next_light.otf');
+  src: url('next_light.otf');
   font-style: normal;
   font-weight: normal;
 }
