--- a/ordineo/src/theme/custom-material-styles.scss
+++ b/ordineo/src/theme/custom-material-styles.scss
@@ -1,5 +1,16 @@
+$mdCardShadowColor: rgba(219,216,219,1);
+
+
 md-tabs.md-default-theme md-ink-bar, md-tabs md-ink-bar {
   color: orange;
   background: orange;
   height: 4px;
+}
+
+md-card {
+
+  border-radius: 0;
+  -webkit-box-shadow: 2px 3px 0px 1px $mdCardShadowColor;
+  -moz-box-shadow: 2px 3px 0px 1px $mdCardShadowColor;
+  box-shadow: 2px 3px 0px 1px $mdCardShadowColor;
 }
