--- a/ordineo/src/profile/components/mood/mood-template.html
+++ b/ordineo/src/profile/components/mood/mood-template.html
@@ -1,5 +1,9 @@
-<div layout="column" flex>
+<div layout="row" flex>
+  <div layout="flex" layout-align="center center">
+    <div class="HAPPY_1_"></div>
+  </div>
   <chartist
+    flex
     class="ct-chart"
     chartist-data="$ctrl.barData"
     chartist-chart-type="Bar"
