--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -17,7 +17,7 @@
             <span class="unit">{{$ctrl.unit}}</span>
           </div>
         </div>
-        <div flex class="about-description NormalCharacterStyle46" >
+        <div flex class="about-description" >
           <p ng-if="$ctrl.description">{{$ctrl.description}}</p>
           <ng-transclude></ng-transclude>
         </div>
