--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -8,7 +8,7 @@
     <span flex="5"></span>
     <!-- Content -->
     <div flex layout="column">
-      <card-header show-btn-edit="true" title="About myself" class="hide-xs"></card-header>
+      <card-header show-btn-edit="true" title="About myself"></card-header>
       <div class="about-content" layout="row" layout-xs="column">
         <div class="about-img" layout="row" layout-align="start top" layout-align-xs="center center">
           <!--todo replace this with <img src=url /> -->
