Made about component editable

--- a/ordineo/src/profile/components/about/about-directive-styles.scss
+++ b/ordineo/src/profile/components/about/about-directive-styles.scss
@@ -50,12 +50,17 @@ profile-about {
   }
   .about-footer {
     border-top: 1px solid $borderColor;
-    .md-button {
+    .md-button.md-primary {
       font-size: 1em;
       font-family: Neuratext;
       border-radius: 0;
-      background-color: $accentColor;
-      color: white;
+      color:white;
+    }
+    .md-button.md-warn {
+      font-size: 1em;
+      font-family: Neuratext;
+      border-radius: 0;
+      color:white;
     }
   }
 }
