Refactored Layout Components

--- a/ordineo/src/layout/header/header.html
+++ b/ordineo/src/layout/header/header.html
@@ -1,6 +1,6 @@
-<div layout="row" class="header-v2-bg" md-whiteframe="2">
+<div layout="row" class="header-bg" md-whiteframe="2">
 
   <div flex layout="row" layout-align="center end">
-    <header-menu menu-items="$ctrl.menuItems"></header-menu>
+
   </div>
 </div>
