--- a/ordineo/src/layout/toolbar/toolbar.html
+++ b/ordineo/src/layout/toolbar/toolbar.html
@@ -1,4 +1,4 @@
-<md-toolbar class="md-medium-tall toolbar-v2" md-whiteframe="1">
+<md-toolbar class="md-medium-tall toolbar" md-whiteframe="1">
   <div layout="row" flex="grow" layout-align="center center">
     <div class="logo"></div>
     <div class="md-toolbar-tools">
