--- a/ordineo/src/layout/toolbar/toolbar.scss
+++ b/ordineo/src/layout/toolbar/toolbar.scss
@@ -1,7 +1,7 @@
 $logoTopLeft: './images/o.jpg';
 $logoSize: 88px;
-main-toolbar-v2 {
-  md-toolbar.toolbar-v2{
+toolbar {
+  md-toolbar.toolbar{
     background-color: white;
   }
   .logo{
