Replace "about myself" with full name

--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -11,7 +11,7 @@
       <div flex layout="column">
         <card-header
           show-btn-edit="true"
-          title="About myself"
+          title="{{$ctrl.title}}"
           on-edit-click="$ctrl.onEdit()"
           on-cancel-click="$ctrl.onCancel()"
           on-save-click="$ctrl.onSubmit()"
