--- a/ordineo/src/layout/header/header.html
+++ b/ordineo/src/layout/header/header.html
@@ -1,6 +1,9 @@
-<div layout="row" class="header-bg" md-whiteframe="2">
-
-  <div flex layout="row" layout-align="center end">
-
+<div layout="row" class="header-bg">
+  <div flex layout="column" layout-align="center center">
+    <span><strong>ORDINEO</strong></span>
+    <div id="search" layout="row" layout-align="center center">
+      <input type="text" placeholder="What/who are you trying to find?">
+      <md-icon md-svg-icon="{{$ctrl.button.icon}}"></md-icon>
+    </div>
   </div>
 </div>
