--- a/ordineo/src/layout/toolbar/toolbar.html
+++ b/ordineo/src/layout/toolbar/toolbar.html
@@ -2,11 +2,11 @@
   <div layout="row" flex="grow" layout-align="center center">
     <div class="logo"></div>
     <div class="md-toolbar-tools">
-      <span flex="60" flex-gt-md="70">
+      <span flex="60" flex-gt-md="60">
         Welcome back, <strong>Hans</strong>!
       </span>
       <div flex layout="row" layout-align="center center">
-        <md-button class="md-icon-button " ng-repeat="btn in $ctrl.buttons">
+        <md-button class="md-icon-button " style="border: solid 1px black;" ng-repeat="btn in $ctrl.buttons">
           <!--<span>{{btn.messages}}</span>-->
 
           <!-- Alert must be placed after the icon -->
