Remove icon borders

--- a/ordineo/assets/styles/main.scss
+++ b/ordineo/assets/styles/main.scss
@@ -66,6 +66,7 @@ $ordinaLogo: '../images/ordina-logo.png';
 body{
   background : #F4F4F4;
   background : rgba(244, 244, 244, 1);
+  height: auto;
 }
 .to-upper-case{
   text-transform: uppercase;
